deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-api-deployment
  namespace: ejercico1
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
        - name: html-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-configmap
          items:
          - key: default.conf
            path: default.conf
      - name: html-content
        configMap:
          name: nginx-configmap
          items:
          - key: index.html
            path: index.html
