service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngnix-api-service
  namespace: ejercico1
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
